--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -109,6 +109,7 @@ div.content a.author.id-t2_5agom:after{content:"Chinchy"}
 a.author.id-t2_5o2lh:after{content:"Luna_in_Equestria"}
 a.author.id-t2_4uott:after{content:"3cakes2pies1fork"}
 a.author.id-t2_3klgq:after {content:" is an artist";}
+a.author[href$="Ntrsoxide"]:after {content:" Wordsmith_Pony"}
 a[href|="/sp"]
 {
  display:inline-block;
@@ -354,7 +355,7 @@ a[href|="/flutterfear"],a[href|="/b00"],a[href|="/ppboring"],a[href|="/b10"],a[h
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
 
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"],a[href|="/pinkiedance"]:hover,a[href|="/sweetiedance"]:hover,a[href|="/dashdance"]:hover
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-flipped%%)!important}
 
 a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%dj-plounge%%)!important}
