--- a/source-css/ponyloungerts.css
+++ b/source-css/ponyloungerts.css
@@ -42,7 +42,7 @@ font-size: 13px;
 
 /*background*/ 
 body {
-background: url(%%background%%)  
+background: url(%%background1%%)  
 no-repeat fixed center center
 }
 
