--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -348,7 +348,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -356,7 +356,7 @@ a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[hre
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"], a[href|="/fshide"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/nerddash"], a[href|="/nerdderpy"], a[href|="/nerdaj"], a[href|="/nerdpinkamena"], a[href|="/nerdrarity"], a[href|="/nerdshy"], a[href|="/nerdtrixie"], a[href|="/nerdpie"], a[href|="/nerdtwi"], a[href|="/nerdscratch"], a[href|="/nerdlyra"], a[href|="/humannerddash"], a[href|="/nerdsunset"], a[href|="/greaserspike"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"], a[href|="/fshide"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/nerddash"], a[href|="/nerdderpy"], a[href|="/nerdaj"], a[href|="/nerdpinkamena"], a[href|="/nerdrarity"], a[href|="/nerdshy"], a[href|="/nerdtrixie"], a[href|="/nerdpie"], a[href|="/nerdtwi"], a[href|="/nerdscratch"], a[href|="/nerdlyra"], a[href|="/humannerddash"], a[href|="/nerdsunset"], a[href|="/greaserspike"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -389,7 +389,7 @@ a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/l
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Misfits e */
-a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"]
+a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/50sflutters"], a[href|="/flutterteen"], a[href|="/sweetiebat"]
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -417,11 +417,11 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/prince
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"]
+a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"]
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
@@ -483,7 +483,7 @@ a[href|="/zerofucks"], a[href|="/greaserspike"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
-a[href|="/pinkiestare"]
+a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"]
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
@@ -637,3 +637,5 @@ a[href|="/over9000"] {width:150px;height:269px;background-position: -850px -250p
 a[href|="/twidorable"] {width:200px;height:112px;}
 a[href|="/nerdcheese"] {width:96px;height:150px;background-position: 0 -112px;}
 a[href|="/50scoco"] {width:153px;height:200px;background-position: -200px 0;}
+a[href|="/50sflutters"], a[href|="/flutterteen"] {width:200px;height:193px;background-position: -353px 0;}
+a[href|="/sweetiebat"] {width:108px;height:150px;background-position: 0 -262px;}
