--- a/source-css/scratchquisition.css
+++ b/source-css/scratchquisition.css
@@ -10,7 +10,7 @@ content: " devotees currently raving"
 }
 
 
-/*emotes*/
+/*VS emotes*/
 a[href|="/sadvinyl"]
 {
  background-image: url(%%sadvinyl%%);
@@ -371,6 +371,67 @@ a[href|="/rariscratchnuzzle"]
     height: 150px;
 }
 
+a[href|="/rariscratchtea"] 
+{
+ background-image: url(%%rariscratchtea%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 238px;
+    height: 150px;
+}
+
+a[href|="/vssleep"] 
+{
+ background-image: url(%%vssleep%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 235px;
+    height: 150px;
+}
+
+a[href|="/vsspeechless"] 
+{
+ background-image: url(%%vsspeechless%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 178px;
+    height: 150px;
+}
+
+a[href|="/vsdemsocks"] 
+{
+ background-image: url(%%vsdemsocks%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 106px;
+    height: 150px;
+}
+
+a[href|="/vsbedroom"] 
+{
+ background-image: url(%%vsbedroom%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 101px;
+    height: 150px;
+}
+
+a[href|="/wubintensifies"] 
+{
+ background-image: url(%%wubintensifies%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 100px;
+    height: 100px;
+}
+
+/*Other emotes*/
 a[href|="/helixfossil"] 
 {
  background-image: url(%%helixfossil%%);
