--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -461,6 +461,20 @@ a[href|="/calamityangry"]{  background-position: -294px -1110px; width: 150px; h
 a[href|="/calamityhandsome"]{  background-position: -294px -1293px; width: 150px; height: 149px; }
 a[href|="/velvetparty"]{  background-position: -294px -1492px; width: 150px; height: 89px; }
 
+a[href|="/batpip"],a[href|="/velvetsocks"],a[href|="/velvetnudge"],a[href|="/velvetfrown"],a[href|="/velvetskip"]
+{
+display: block;
+clear: none;
+float: left;
+background-repeat: no-repeat;
+background-image: url(%%foe-em8-v01%%);
+}
+a[href|="/batpip"]{  background-position: 0 0; width: 123px; height: 150px; }
+a[href|="/velvetsocks"]{  background-position: 0 -200px; width: 150px; height: 121px; }
+a[href|="/velvetnudge"]{  background-position: 0 -371px; width: 143px; height: 150px; }
+a[href|="/velvetfrown"]{  background-position: 0 -571px; width: 150px; height: 130px; }
+a[href|="/velvetskip"]{  background-position: 0 -751px; width: 150px; height: 118px; }
+
 a[href|="/advicebj"]
 {
     width: 305px !important;
