--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -128,15 +128,6 @@ a[href|="/swordsmile"] {
     background-image: url(%%swordsmile%%)
     }
 
-a[href|="/agentp"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 97px;
-    background-repeat: no-repeat;
-    background-image: url(%%agentp%%)
-    }
 
 a[href|="/perry"] {
     display: block;
@@ -148,25 +139,6 @@ a[href|="/perry"] {
     background-image: url(%%perry%%)
     }
 
-a[href|="/doofenshmirtz"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 40px;
-    height: 90px;
-    background-repeat: no-repeat;
-    background-image: url(%%doofenshmirtz%%)
-    }
-
-a[href|="/thedoof"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 160px;
-    height: 200px;
-    background-repeat: no-repeat;
-    background-image: url(%%thedoof%%)
-    }
 
 a[href|="/sadmonogram"] {
     display: block;
@@ -178,15 +150,6 @@ a[href|="/sadmonogram"] {
     background-image: url(%%sadmonogram%%)
     }
 
-a[href|="/monogram"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 90px;
-    height: 106px;
-    background-repeat: no-repeat;
-    background-image: url(%%monogram%%)
-    }
 
 a[href|="/swordulan"] {
     display: block;
@@ -268,12 +231,282 @@ a[href|="/iseeham"] {
     background-image: url(%%iseeham%%)
     }
 
+a[href|="/male1"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male1%%)
+    }
+
 a[href|="/male2"] {
     display: block;
     clear: none;
     float: left;
-    width: 80px;
-    height: 96px;
+    width: 70px;
+    height: 110px;
     background-repeat: no-repeat;
     background-image: url(%%male2%%)
+    }
+
+a[href|="/male3"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male3%%)
+    }
+
+a[href|="/male4"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male4%%)
+    }
+
+a[href|="/male5"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male5%%)
+    }
+
+a[href|="/male6"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male6%%)
+    }
+
+a[href|="/male7"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male7%%)
+    }
+
+a[href|="/male8"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male8%%)
+    }
+
+a[href|="/male9"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male9%%)
+    }
+
+a[href|="/male10"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male10%%)
+    }
+
+a[href|="/male11"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male11%%)
+    }
+
+a[href|="/male12"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male12%%)
+    }
+
+a[href|="/male13"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male13%%)
+    }
+
+a[href|="/male14"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male14%%)
+    }
+
+a[href|="/male15"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male15%%)
+    }
+
+a[href|="/male16"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male16%%)
+    }
+
+a[href|="/male17"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male17%%)
+    }
+
+a[href|="/male18"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male18%%)
+    }
+
+a[href|="/male19"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male19%%)
+    }
+
+a[href|="/male20"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%male20%%)
+    }
+
+a[href|="/female1"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female1%%)
+    }
+
+a[href|="/female2"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female2%%)
+    }
+
+a[href|="/female3"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female3%%)
+    }
+
+a[href|="/female4"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female4%%)
+    }
+
+a[href|="/female5"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female5%%)
+    }
+
+a[href|="/female6"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female6%%)
+    }
+
+a[href|="/female7"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female7%%)
+    }
+
+a[href|="/female8"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 110px;
+    background-repeat: no-repeat;
+    background-image: url(%%female8%%)
     }
