Stylesheet/emote/tag updates 2014-03-16

--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -111,6 +111,16 @@ background-image:url(%%sheet2%%);
 background-position: -38px -390px;
 }
 
+a[href|="/ohyouchaser"] {
+float:left;
+width:146px;
+height:143px;
+background-repeat:no-repeat;
+background-image:url(%%sheet2%%);
+background-position: -198px -378px;
+}
+
+
 /*stylesheet2 "sheet2" end*/
 
 
