--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -389,7 +389,7 @@ a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/l
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Misfits e */
-a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/50sflutters"], a[href|="/flutterteen"], a[href|="/sweetiebat"]
+a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/50sflutters"], a[href|="/flutterteen"], a[href|="/sweetiebat"], a[href|="/scootabat"]
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -639,3 +639,4 @@ a[href|="/nerdcheese"] {width:96px;height:150px;background-position: 0 -112px;}
 a[href|="/50scoco"] {width:153px;height:200px;background-position: -200px 0;}
 a[href|="/50sflutters"], a[href|="/flutterteen"] {width:200px;height:193px;background-position: -353px 0;}
 a[href|="/sweetiebat"] {width:108px;height:150px;background-position: 0 -262px;}
+a[href|="/scootabat"] {width:138px;height:150px;background-position: -562px 0;}
