--- a/source-css/trixquisition.css
+++ b/source-css/trixquisition.css
@@ -62,6 +62,7 @@ a[href|="/Trixiewillreku"]       {background-position: -600px -0px  }
 a[href|="/thebestponyishappy"]   {background-position: -0px -200px  }
 a[href|="/didntseeyouthere"]     {background-position: -400px -200px}   
 a[href|="/trixieisbestnerd"]     {background-position: -600px -200px}
+
 /*heterogeneous emotes*/
 
 a[href|="/EGtrixieisbesthuman"] {
@@ -90,4 +91,13 @@ Float: left;
 Width: 91px;
 Height: 115px;
 Background-image: url(%%trixiefilly%%) !important }
+
+a[href|="/pleasenoticeme"] {
+Background-position: -0px -0px;
+Display: Block;
+CLear: None;
+Float: left;
+Width: 160px;
+Height: 222px;
+Background-image: url(%%tired%%) !important }
 
