--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -94,7 +94,7 @@ a[href|="/sp"]{ display: inline-block; padding-right: 100%; width: 0px; height: 
 /*** Emotes ***/
 
 /* 100px shared values */
-a[href|="/cheese"], a[href|="/boneless"], a[href|="/cheesesquint"], a[href|="/cheesestare"], a[href|="/imfine"]{
+a[href|="/cheese"], a[href|="/boneless"], a[href|="/cheesesquint"], a[href|="/cheesestare"], a[href|="/imfine"], a[href|="/cheesechill"], a[href|="/cheesemad"]{
     display: block;
     clear: none;
     float: left;
@@ -109,6 +109,8 @@ a[href|="/boneless"]{ background-position:-100px -0px }
 a[href|="/cheesesquint"]{ background-position: -200px -0px }
 a[href|="/cheesestare"]{ background-position: -0px -100px }
 a[href|="/imfine"]{ background-position: -100px -100px }
+a[href|="/cheesechill"]{ background-position: -200px -100px }
+a[href|="/cheesemad"]{ background-position: -0px -200px }
 
 /* 150px shared values */
 a[href|="/cheeseshock"], a[href|="/cheesethis"], a[href|="/cheesehappy"], a[href|="/cheeseandpinkie"], a[href|="/accordian"], a[href|="/partyhard"], a[href|="/cheesesmile"], a[href|="/cheesehug"], a[href|="/ppcheesehug"]{
