--- a/source-css/ponyloungerts.css
+++ b/source-css/ponyloungerts.css
@@ -601,7 +601,14 @@ width: 314px;
 height: 194px;
 background-image: url(%%rainbowsucks%%) !important
 }
-
+a[href|="/shhnotears"] {
+display: block;
+clear: none;
+float: left;
+width: 250px;
+height: 202px;
+background-image: url(%%shhnotears%%) !important
+}
 
 /* -----flair test-----*/
 /************
