--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -803,7 +803,7 @@ a[href|="/evilcadance"] {
     height: 130px;
     background-image:url(%%EvilCadance%%)
 }
-a[href|="/cheericmon"],a[href|="/cheeriflatter"],a[href|="/cheerigetaway"],a[href|="/cheerishame"],a[href|="/cheeriwaitwhat"],a[href|="/seriouslyscarysurprise"],a[href|="/seriouslycasual"],a[href|="/seriouslynotseriousvinyl"],a[href|="/lunayouthere"],a[href|="/couchiepie"],a[href|="/seriouslysrslyocty"],a[href|="/seriouslyshockedocty"],a[href|="/seriouslyscepticalocty"]
+a[href|="/cheericmon"],a[href|="/cheeriflatter"],a[href|="/cheerigetaway"],a[href|="/cheerishame"],a[href|="/cheeriwaitwhat"],a[href|="/seriouslyscarysurprise"],a[href|="/seriouslycasual"],a[href|="/seriouslynotseriousvinyl"],a[href|="/lunayouthere"],a[href|="/couchiepie"],a[href|="/seriouslysrslyocty"],a[href|="/seriouslyshockedocty"],a[href|="/seriouslyscepticalocty"],a[href|="/seriouslybot"],a[href|="/cutelunabot"],a[href|="/seriouslyflutter"]
 {display:block;clear:none;float:left;background-image:url(%%EmoteSheet5a%%)!important}
 a[href|="/cheericmon"] {width:103px;height:123px;background-position:-0px -0px}
 a[href|="/cheeriflatter"] {width:115px;height:137px;background-position:-103px -0px}
@@ -818,6 +818,9 @@ a[href|="/couchiepie"] {width:171px;height:150px;background-position:-1385px -0p
 a[href|="/seriouslysrslyocty"] {width:159px;height:150px;background-position:-1556px -0px}
 a[href|="/seriouslyshockedocty"] {width:143px;height:150px;background-position:-1715px -0px}
 a[href|="/seriouslyscepticalocty"] {width:133px;height:150px;background-position:-1858px -0px}
+a[href|="/seriouslybot"] {width:202px;height:150px;background-position:-1991px -0px}
+a[href|="/cutelunabot"] {width:150px;height:150px;background-position:-2193px -0px}
+a[href|="/seriouslyflutter"] {width:126px;height:150px;background-position:-2343px -0px}
 
 /***********************
 *
